tests/errors/type_mismatch_division.sp
# Test division type mismatch
pub result = "hello" / 42